# me-as-a-service

./: .gitignore  CLAUDE.md  DEPLOY.md  PRD.md  RATE_LIMITING_SPEC.md  README.md  TECHNICAL_SPEC.md  UI_TECHNICAL_SPEC.md
.claude/skills/zine-theme/: SKILL.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  deps.py  main.py  models.py  pgvector.py  sse.py  supabase_client.py  version.py
backend/app/routers/: chat.py  health.py  leads.py
backend/app/services/: answer.py  chunking.py  embedder.py  leads.py  notifier.py  rate_limit.py  retrieval.py
backend/scripts/: ingest.py  query.py
backend/tests/: conftest.py  test_chat_api.py  test_chunking.py  test_leads_api.py  test_notifier.py  test_rate_limit.py
content/: about.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
frontend/src/components/: AppShell.tsx
frontend/src/components/chat/: ChatPanel.tsx  Composer.tsx  Message.tsx  MessageList.tsx  StarterQuestions.tsx
frontend/src/components/connect/: ConnectForm.test.tsx  ConnectForm.tsx
frontend/src/components/doodles/: index.tsx
frontend/src/components/profile/: Avatar.tsx  ProfilePanel.tsx  SocialLinks.tsx
frontend/src/content/: profile.ts
frontend/src/lib/: postLead.test.ts  postLead.ts  streamChat.test.ts  streamChat.ts  useChatStream.ts
frontend/src/styles/: global.css  tokens.css
frontend/src/test/: setup.ts
supabase/migrations/: 0001_init.sql  0002_rate_limits.sql  0003_leads.sql
(+1 files in other folders)
